--- a/src/BdziamPak/BdziamPak.csproj
+++ b/src/BdziamPak/BdziamPak.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="NuGet.Versioning" Version="6.12.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Git\" />
+    </ItemGroup>
+
 </Project>
