--- a/src/BdziamPak/BdziamPak.csproj
+++ b/src/BdziamPak/BdziamPak.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
       <PackageReference Include="NuGet.Common" Version="6.12.1" />
       <PackageReference Include="NuGet.Configuration" Version="6.12.1" />
@@ -14,10 +15,6 @@
       <PackageReference Include="NuGet.Protocol" Version="6.12.1" />
       <PackageReference Include="NuGet.Resolver" Version="6.12.1" />
       <PackageReference Include="NuGet.Versioning" Version="6.12.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Git\" />
     </ItemGroup>
 
 </Project>
