--- a/src/BdziamPak/BdziamPak.csproj
+++ b/src/BdziamPak/BdziamPak.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Downloader" Version="3.3.1" />
       <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
       <PackageReference Include="NuGet.Common" Version="6.12.1" />
