--- a/src/BdziamPak/BdziamPak.csproj
+++ b/src/BdziamPak/BdziamPak.csproj
@@ -6,16 +6,38 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>BdziamPak</PackageId>
+        <Title>Pluggable Package Manager Library</Title>
+        <Authors>Cybernomad</Authors>
+        <Description>BdziamPak is a C# library that provides a mechanism to resolve dependencies for a given metadata using customizable resolvement process</Description>      
+        <Copyright>2024 Piotr Mikstacki @ CyberNomad</Copyright>
+        <PackageProjectUrl>https://github.com/pmikstacki/BdziamPak</PackageProjectUrl>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <RepositoryUrl>https://github.com/pmikstacki/BdziamPak</RepositoryUrl>
+        <PackageTags>DependencyInjection;Bdziam;Resolver</PackageTags>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageIcon>icon.png</PackageIcon>
+    </PropertyGroup>
+
     <ItemGroup>
-      <PackageReference Include="Downloader" Version="3.3.1" />
-      <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
-      <PackageReference Include="NuGet.Common" Version="6.12.1" />
-      <PackageReference Include="NuGet.Configuration" Version="6.12.1" />
-      <PackageReference Include="NuGet.Packaging" Version="6.12.1" />
-      <PackageReference Include="NuGet.Protocol" Version="6.12.1" />
-      <PackageReference Include="NuGet.Resolver" Version="6.12.1" />
-      <PackageReference Include="NuGet.Versioning" Version="6.12.1" />
+        <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+        <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
+        <None Include="icon.png" Pack="true" PackagePath="\"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Bdziam.ExternalDependencyResolver" Version="0.0.9"/>
+        <PackageReference Include="Downloader" Version="3.3.1"/>
+        <PackageReference Include="LibGit2Sharp" Version="0.31.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0"/>
+        <PackageReference Include="NuGet.Common" Version="6.12.1"/>
+        <PackageReference Include="NuGet.Configuration" Version="6.12.1"/>
+        <PackageReference Include="NuGet.Packaging" Version="6.12.1"/>
+        <PackageReference Include="NuGet.Protocol" Version="6.12.1"/>
+        <PackageReference Include="NuGet.Resolver" Version="6.12.1"/>
+        <PackageReference Include="NuGet.Versioning" Version="6.12.1"/>
     </ItemGroup>
 
 </Project>
