Fixes to Dockerfile, added material

--- a/src/BdziamPak.PakRepoApi/Dockerfile
+++ b/src/BdziamPak.PakRepoApi/Dockerfile
@@ -10,8 +10,7 @@ ENV Auth__ApiKey=$API_KEY
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["BdziamPak.PakRepoApi/BdziamPak.PakRepoApi.csproj", "BdziamPak.PakRepoApi/"]
-RUN dotnet restore "BdziamPak.PakRepoApi/BdziamPak.PakRepoApi.csproj"
+RUN dotnet restore "./BdziamPak.PakRepoApi/BdziamPak.PakRepoApi.csproj"
 COPY . .
 WORKDIR "/src/BdziamPak.PakRepoApi"
 RUN dotnet build "BdziamPak.PakRepoApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
