Maybe this will work idk anymore

--- a/src/BdziamPak.PakRepoApi/Dockerfile
+++ b/src/BdziamPak.PakRepoApi/Dockerfile
@@ -11,11 +11,9 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY . .
-WORKDIR "/src/BdziamPak.PakRepoApi"
-RUN file="$(ls)" && echo $file
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish BdziamPak.PakRepoApi.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish /src/BdziamPak.PakRepoApi/BdziamPak.PakRepoApi.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
