Started work on simplifying and generalizing the process.

--- a/src/BdziamPak.PakRepoApi/BdziamPak.PakRepoApi.csproj
+++ b/src/BdziamPak.PakRepoApi/BdziamPak.PakRepoApi.csproj
@@ -21,4 +21,9 @@
         <ProjectReference Include="..\BdziamPak\BdziamPak.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Endpoints\Requests\" />
+      <Folder Include="Endpoints\Responses\" />
+    </ItemGroup>
+
 </Project>
